; ModuleID = '/home/carl/AnghaBench/php-src/ext/intl/resourcebundle/extr_resourcebundle_iterator.c_resourcebundle_iterator_dtor.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/intl/resourcebundle/extr_resourcebundle_iterator.c_resourcebundle_iterator_dtor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @resourcebundle_iterator_dtor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @resourcebundle_iterator_dtor(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = bitcast i32* %5 to %struct.TYPE_4__*
  store %struct.TYPE_4__* %6, %struct.TYPE_4__** %3, align 8
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  store i32* %9, i32** %4, align 8
  %10 = load i32*, i32** %2, align 8
  %11 = call i32 @resourcebundle_iterator_invalidate(i32* %10)
  %12 = load i32*, i32** %4, align 8
  %13 = call i32 @zval_ptr_dtor(i32* %12)
  ret void
}

declare dso_local i32 @resourcebundle_iterator_invalidate(i32*) #1

declare dso_local i32 @zval_ptr_dtor(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
